Melhorias na página

--- a/CSS/aula01/index.html
+++ b/CSS/aula01/index.html
@@ -22,7 +22,7 @@
                 todos os elementos em grupos ou personalizar separadamente, podendo ter vários estilos em uma mesma página.
             </p>
             <p>
-                Com o uso é feito com uma sintaxe simples, baseada na língua inglesa, com um conjunto de regras que são estipuladas
+                O uso é feito com uma sintaxe simples, baseada na língua inglesa, com um conjunto de regras que são estipuladas
                 para o arquivo HTML a partir do uso de seletores, que são feitos em formatos de tags, como por exemplo a tag '< p >' que indica
                 que o elemento contido dela é um parágrafo. O CSS ainda permite que a sua "formatação" seja feita em 3 estilos diferentes: <b>CSS Externo</b>,
                 <b>CSS Interno</b> e o <b>CSS Inline</b>.
@@ -33,20 +33,26 @@
             </p>
             <p> <b>CSS Interno</b>: todas as operações nescessárias são feitas dentro do próprio index, mais especificamente, no seu 
                 cabecalho. A sua desvantagem é que os estilos não poderão ser usados em várias páginas ao mesmo tempo, e o seu tempo de carregamento é mais
-                demorado. O seu comando de inserção é: < style type = "text/css" > dentro da tag < header >. 
+                demorado. O seu comando de inserção é: < style type = "text/css" > dentro da tag do < header >. 
             </p>
             <p> <b>CSS Inline</b>: esse estilo trabalha com elementos especifícos, a sua configuração é feita junto com a declaração da tag
                 do elemento. Não é uma forma muito rápida de estilizar, porém nesse caso teria uma maior prioridade no estilo, caso seja usado junto com o 
                 externo ou interno. Um exemplo do seu uso seria: < h1 color = "red"> , onde a cor do título será vermelha. 
             </p>
+            <p><b>Eventos</b>: Um uso muito recorrente do CSS é a adição de eventos interativos com o usuário, como este texto por exemplo, 
+                a sua fonte irá aumentar e uma borda tracejada irá surgir quando passar o mouse pelos dos parágrafos. Os botões abaixo também vão 
+                responder a essa ação, alterando a sua cor e destacando o seu conteúdo.
+            </p>
+            <br>
         </div>
     <section>
         <a class="button" href="https://www.youtube.com/playlist?list=PL2Fdisxwzt_f5C7Mv0kg1EAHhy2VJLf1c" target="_blank">Curso usado como referência</a>
         <a class="button" href="https://www.hostinger.com.br/tutoriais/o-que-e-css-guia-basico-de-css" target="_blank">Texto usado como referência</a><br>
     </section>
-
+    <br>
     <footer>
-        <b>Copright 2023</b>
+        <b>Copright 2023</b><br>
+        Luana
     </footer>
 </body>
 </html>
