--- a/CSS/aula01/index.html
+++ b/CSS/aula01/index.html
@@ -10,7 +10,7 @@
 <body class="back">
     <header>CSS Style</header>
         <div>
-            <h1>O uso do Cascading Style Sheet</h1>
+            <h1>O Cascading Style Sheet</h1>
             <p>
                 O CSS é usado para estilizar os elementos contidos no HTML, que é a linguagem de marcação de uma página.
             Como o HTML não possui suporte para alterar os elementos da página, o CSS foi desenvolvido pela W3C(World Wide Web
@@ -33,15 +33,20 @@
             </p>
             <p> <b>CSS Interno</b>: todas as operações nescessárias são feitas dentro do próprio index, mais especificamente, no seu 
                 cabecalho. A sua desvantagem é que os estilos não poderão ser usados em várias páginas ao mesmo tempo, e o seu tempo de carregamento é mais
-                demorado. O seu comando de inserção é: < style type = "text/css" > dentro da tag do < header >. 
+                demorado. O seu comando de inserção é: < style type = "text/css" > dentro da tag header. 
             </p>
             <p> <b>CSS Inline</b>: esse estilo trabalha com elementos especifícos, a sua configuração é feita junto com a declaração da tag
                 do elemento. Não é uma forma muito rápida de estilizar, porém nesse caso teria uma maior prioridade no estilo, caso seja usado junto com o 
-                externo ou interno. Um exemplo do seu uso seria: < h1 color = "red"> , onde a cor do título será vermelha. 
+                externo ou interno. Um exemplo do seu uso seria: < h1 style="color: red"> , onde a cor do título será vermelha. 
             </p>
-            <p><b>Eventos</b>: Um uso muito recorrente do CSS é a adição de eventos interativos com o usuário, como este texto por exemplo, 
+            <h1>Eventos</h1>
+            <p> Um uso muito recorrente do CSS é a adição de eventos interativos com o usuário, como este texto por exemplo, 
                 a sua fonte irá aumentar e uma borda tracejada irá surgir quando passar o mouse pelos dos parágrafos. Os botões abaixo também vão 
-                responder a essa ação, alterando a sua cor e destacando o seu conteúdo.
+                responder a essa ação, alterando a sua cor e destacando o seu conteúdo. Os eventos também podem ser usados com o JavaScript, fazendo assim o uso 
+                das 3 bases para o desenvolvimento web, o HTML, CSS e o JS.
+            </p>
+            <p>Não é o caso deste site, pois também é possível fazer o uso apenas do CSS para acionar os eventos e tornar o site ainda mais dinâmico. Mas nem tudo 
+                é sobre a aparência, o site precisa ser intuitivo para que os usuários saibam o que é cada uma das suas funcionalidades. E esse conceito já entra no design UX, ou Experiência do Usuário.
             </p>
             <br>
         </div>
