Midia Queries e Flexbox
Criação de um card com imagens, estudo de Midia Queries e Flexbox

--- a/CSS/DropDown/index.html
+++ b/CSS/DropDown/index.html
@@ -21,5 +21,40 @@
                 </div>
         </li>
     </ul>
+    <br>
+    <div class="caixa">
+        <img src="/istockphoto.jpg" style="max-width : 80%">
+        <h2 style="margin-bottom: 0;padding-bottom:0">Isso é um Card!!</h2>
+        <h4>
+            Imagem ilustrativa de um banco de imagens gratuito!
+        </h4>
+        <p class="reduzir">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, corporis nostrum blanditiis veniam reprehenderit ipsa nesciunt
+         quidem recusandae neque aspernatur, explicabo optio doloremque ab sit. Saepe aperiam nisi sapiente et.
+        </p>
+    </div>
+    <br>
+    <div>
+        <h1>Midia Queries</h1>
+        <p>Layouts responsivos conforme as mudanças de tamanhos de telas</p>
+    </div>
+    <br>
+    <h1>Flexbox</h1>
+    <div class="flex-pai">
+        <div style="flex:20%">
+            Display do tipo flex, adaptação de forma mais automática.
+        </div>
+        <div style="flex: 40%">
+            2
+        </div>
+        <div style="flex: 35%">
+            3
+        </div>
+        <div style="flex: 25%">
+            4
+        </div>
+        <div style="flex: 48%">
+            5
+        </div>
+    </div>
 </body>
 </html>
