--- a/freeCodeCamp/CatPhotoApp/index.html
+++ b/freeCodeCamp/CatPhotoApp/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     <title>CatPhotoApp</title>
+    <link rel="stylesheet" href="./style.css" type="text/css">
   </head>
   <body>
     <main>
@@ -15,37 +16,39 @@
           <a target="_blank" href="https://freecatphotoapp.com">cat photos</a>
           in our gallery.
         </p>
-        <a href="https://freecatphotoapp.com"
-          ><img
-            src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg"
+        <a href="https://freecatphotoapp.com">
+          <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg"
             alt="A cute orange cat lying on its back."
+            width="25%"
         /></a>
       </section>
       <section>
         <h2>Cat Lists</h2>
         <h3>Things cats love:</h3>
         <ul>
-          <li>cat nip</li>
-          <li>laser pointers</li>
-          <li>lasagna</li>
+          <li>Cat nip</li>
+          <li>Laser pointers</li>
+          <li>Lasagna</li>
         </ul>
         <figure>
           <img
             src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg"
             alt="A slice of lasagna on a plate."
+            width="25%"
           />
           <figcaption>Cats <em>love</em> lasagna.</figcaption>
         </figure>
         <h3>Top 3 things cats hate:</h3>
         <ol>
-          <li>flea treatment</li>
-          <li>thunder</li>
-          <li>other cats</li>
+          <li>Flea treatment</li>
+          <li>Thunder</li>
+          <li>Other cats</li>
         </ol>
         <figure>
           <img
             src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg"
             alt="Five cats looking around a field."
+            width="40%"
           />
           <figcaption>Cats <strong>hate</strong> other cats.</figcaption>
         </figure>
@@ -62,11 +65,8 @@
                 name="indoor-outdoor"
                 value="indoor"
                 checked
-              />
-              Indoor</label
-            >
-            <label
-              ><input
+              />Indoor</label>
+            <label><input
                 id="outdoor"
                 type="radio"
                 name="indoor-outdoor"
@@ -106,10 +106,8 @@
       </section>
     </main>
     <footer>
-      <p>
         No Copyright -
         <a href="https://www.freecodecamp.org">freeCodeCamp.org</a>
-      </p>
     </footer>
   </body>
 </html>
