--- a/freeCodeCamp/CatPhotoApp/index.html
+++ b/freeCodeCamp/CatPhotoApp/index.html
@@ -19,8 +19,7 @@
         <a href="https://freecatphotoapp.com">
           <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg"
             alt="A cute orange cat lying on its back."
-            width="25%"
-        /></a>
+            width="25%" /></a>
       </section>
       <section>
         <h2>Cat Lists</h2>
@@ -34,8 +33,7 @@
           <img
             src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg"
             alt="A slice of lasagna on a plate."
-            width="25%"
-          />
+            width="25%"/>
           <figcaption>Cats <em>love</em> lasagna.</figcaption>
         </figure>
         <h3>Top 3 things cats hate:</h3>
@@ -48,8 +46,7 @@
           <img
             src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg"
             alt="Five cats looking around a field."
-            width="40%"
-          />
+            width="40%"/>
           <figcaption>Cats <strong>hate</strong> other cats.</figcaption>
         </figure>
       </section>
@@ -58,8 +55,7 @@
         <form action="https://freecatphotoapp.com/submit-cat-photo">
           <fieldset>
             <legend>Is your cat an indoor or outdoor cat?</legend>
-            <label
-              ><input
+            <label><input
                 id="indoor"
                 type="radio"
                 name="indoor-outdoor"
@@ -71,9 +67,7 @@
                 type="radio"
                 name="indoor-outdoor"
                 value="outdoor"
-              />
-              Outdoor</label
-            >
+            />Outdoor</labe>
           </fieldset>
           <fieldset>
             <legend>What's your cat's personality?</legend>
@@ -82,8 +76,7 @@
               type="checkbox"
               name="personality"
               value="loving"
-              checked
-            />
+              checked/>
             <label for="loving">Loving</label>
             <input id="lazy" type="checkbox" name="personality" value="lazy" />
             <label for="lazy">Lazy</label>
@@ -91,16 +84,14 @@
               id="energetic"
               type="checkbox"
               name="personality"
-              value="energetic"
-            />
+              value="energetic" />
             <label for="energetic">Energetic</label>
           </fieldset>
           <input
             type="text"
             name="catphotourl"
             placeholder="cat photo URL"
-            required
-          />
+            required/>
           <button type="submit">Submit</button>
         </form>
       </section>
